worked on washington, just have to finish up mini stats

--- a/wa.html
+++ b/wa.html
@@ -44,8 +44,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Eviction Research Network</h1> <span>.</span>
+        <img src="images/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER.png" alt="The Eviction Research Network logo;">
+        <!-- <h1 class="sitename">Eviction Research Network</h1> <span>.</span> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -86,7 +86,7 @@
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);"> -->
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);"> -->
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/JNGQE9951.png);"> -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/IMG_0140.png);">
+    <div class="page-title dark-background" style="background-image: url(images/seattle_air.png);">
       <div class="container position-relative">
         <h1>Washington State</h1>
         <nav class="breadcrumbs">
@@ -100,7 +100,7 @@
     </div><!-- End Section Title -->
 
    <!-- Overview -->
-   <section id="alt-services" class="alt-services section">
+   <!-- <section id="alt-services" class="alt-services section"> 
     <div class="container section-title">
       <h2>Overview</h2>
       <p>Washington Evictions Are:</p>
@@ -120,7 +120,7 @@
       </div>
       
     </div>
-    <!-- /Overview -->
+     /Overview --> 
     <!-- Historical Average Plot -->
     <section id="alt-services" class="alt-services section">
 
@@ -131,7 +131,7 @@
           <!-- <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/alt-services.jpg" alt=""></div> -->
 
           <!-- begin datawrapper snippet -->
-          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="features-image col-lg-6">
             <iframe title="" aria-label="Column Chart" id="datawrapper-chart-qRMuv" src="https://datawrapper.dwcdn.net/qRMuv/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="470" data-external="1">
             </iframe>
             <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
@@ -139,8 +139,8 @@
           </div>
           <!-- end datawrapper snippet -->
 
-          <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Washington State & County Monthly Filing Counts Compared to 2019 Historical Average</h3>
+          <div class="col-lg-5 d-flex flex-column justify-content-center">
+            <h3>Washington State & County Eviction Trends</h3>
             <p>Washington State's eviction filing count is 54% points higher in Feb. 2024 than it was in Feb. 2019. 
             </p>
             <ul>
@@ -148,10 +148,10 @@
               <li><span>Spokane County has the most above-historical-average months.</span></li>
             </ul>
 
-            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon-box d-flex position-relative">
               <i class="bi bi-folder2"></i>
               <div>
-                <h4><a href="" class="stretched-link">Read More</a></h4>
+                <h4><a href="https://evictionresearch.net/washington/" class="stretched-link">Read 2020 Report</a></h4>
                 <p>The State of Evictions: Results from the University of Washington Evictions Project</p>
               </div>
             </div><!-- End Icon Box -->
@@ -167,7 +167,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Stats</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -176,20 +175,20 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
+              <i class="bi bi-arrow-up-short color-blue flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
+                <p>1 in</p><span data-purecounter-start="0" data-purecounter-end="55" data-purecounter-duration="1" class="purecounter"></span>
+                <p>adults were evicted between 2013 and 2017</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
+              <i class="bi bi-chevron-down color-orange flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
+                <span data-purecounter-start="0" data-purecounter-end="90554" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Affordable rentals lost since 2000</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
