--- a/wa.html
+++ b/wa.html
@@ -50,29 +50,30 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="https://evictionresearch.net/" class="active">Home</a></li>
+          <li><a href="https://evictionresearch.net/">About</a></li>
+          <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="#"><span>State Eviction Maps & Profiles</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="https://evictionresearch.net/oregon/">Oregon</a></li>
+                  <li><a href="https://evictionresearch.net/indiana/">Indiana</a></li>
+                  <li><a href="https://evictionresearch.net/minnesota/">Minnesota</a></li>
+                  <li><a href="https://evictionresearch.net/delaware/">Delaware</a></li>
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li><a href="https://evictionresearch.net/">Earlier Work</a></li>
+              <li><a href="https://evictionresearch.net/">Reports</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="https://evictionresearch.net/resources">Eviction Help</a></li>
+              <li><a href="https://evictionresearch.net/research">Other Eviction Research</a></li>
+            </ul>
+          </li>
+          <!-- <li><a href="blog.html">Blog</a></li> 
+          <li><a href="contact.html">Contact</a></li> -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -219,14 +220,14 @@
 
     </section><!-- /Stats Counter Section -->
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section  (ADD LATER ON WITH LONGER STATS/GRAPHS??)
     <section id="testimonials" class="testimonials section">
 
-      <!-- Section Title -->
+      <!-- Section Title 
       <div class="container section-title" data-aos="fade-up">
         <h2>Stats</h2>
         <p>Provides more space for stats/graphs</p>
-      </div><!-- End Section Title -->
+      </div><!-- End Section Title 
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -274,7 +275,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -292,7 +293,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -310,7 +311,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -328,7 +329,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -346,7 +347,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item 
 
           </div>
           <div class="swiper-pagination"></div>
@@ -354,7 +355,7 @@
 
       </div>
 
-    </section><!-- /Testimonials Section -->
+    </section><!-- /Testimonials Section --> 
 
   </main>
 
