added to Research & News

--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <span>Legal Services Corporation</span></li>
                   <li><i class="bi bi-chevron-right"></i> <span>Portland State University</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <span>Chicago Legal Aid / ACLU</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Chicago Legal Aid / ACLU / Cook County Sheriff's Department</span></li>
                   <li><i class="bi bi-chevron-right"></i> <span>Baltimore City Sheriff's Department</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <span>Washington State unlawful detainer data</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Washington State Superior Court / County Court Clerks</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
