--- a/projects.html
+++ b/projects.html
@@ -87,11 +87,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(images/);">
       <div class="container position-relative">
-        <h1>Reports & News</h1>
+        <h1>Research & News</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Reports & News</li>
+            <li class="current">Research & News</li>
           </ol>
         </nav>
       </div>
@@ -119,7 +119,7 @@
                 <img src="images/National_data_report.PNG" class="img-fluid" alt="" style="border: #000000 2px outset">
                 <div class="portfolio-info">
                   <h4>Report</h4>
-                  <p>National Eviction Data Collection Strategy</p>
+                  <p><u>National Eviction Data Collection Strategy</u><br>this is some more text so we can see what's going on in the image. Ok? Yeay? doggies</p>
                   <a href="images/National_data_report.PNG" title="Toward a National Eviction Data Collection Strategy Using Natural Language Processing | 2024" data-gallery="portfolio-gallery-report" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://www.huduser.gov/portal/periodicals/cityscape/vol26num1/ch12.pdf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -128,12 +128,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-1.jpg" class="img-fluid" alt="">
+                <img src="images/portland_study.PNG" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Study</h4>
+                  <p>Targeted, Harassed, and Displaced: The Role of Discrimination in Oregon Evictions</p>
+                  <a href="images/portland_study.PNG" title="Targeted, Harassed, and Displaced: The Role of
+                  Discrimination in Oregon Evictions | 2024" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://pdxscholar.library.pdx.edu/cgi/viewcontent.cgi?article=1387&context=usp_fac" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
