--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       <br>
       <br>
       <div class="col-lg-12 text-center">
-        <h4><a href="projects.html" class="btn-get-started"><span>For more research & news </span><i class="bi bi-arrow-right"></i></a></h4>
+        <h4><a href="research&news.html" class="btn-get-started"><span>For more research & news </span><i class="bi bi-arrow-right"></i></a></h4>
       </div>
           
         
