some tiny changes (footer, index)

--- a/index.html
+++ b/index.html
@@ -821,9 +821,9 @@
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        <div class="col-lg-3 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span State Profile"sitename">Eviction Research Network</span>
+            <img src="images/ern_logo/1A/EvictionStudy_logo_v09_1A_LOGO_STACK_REV.png" alt="The Eviction Research Network logo">
           </a>
           <div class="footer-links">
             <ul><li><a href="https://twitter.com/EvictionNet">Urban Displacement Project</a></li></ul>
@@ -834,7 +834,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
+        <div class="col-lg-2 col-md-4 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="https://evictionresearch.net/">Home</a></li>
