--- a/or.html
+++ b/or.html
@@ -87,7 +87,7 @@
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);"> -->
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);"> -->
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/JNGQE9951.png);"> -->
-    <div class="page-title dark-background" style="background-image: url(images/);">
+    <div class="page-title-state dark-background" style="background-image: url(images/);">
       <div class="container position-relative">
         <h1>Oregon State</h1>
         <nav class="breadcrumbs">
