messing around with or

--- a/or.html
+++ b/or.html
@@ -266,6 +266,86 @@
 
     </section><!-- /Historical Average Plot -->
 
+        <!-- Historical Average Plot -->
+    <section id="alt-services" class="alt-services section" style="padding:30px">
+
+      <div class="container">
+
+        <div class="row justify-content-around gy-4">
+          <!-- original snippet -->
+          <!-- <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/alt-services.jpg" alt=""></div> -->
+
+          <!-- begin datawrapper snippet -->
+          <div class="features-image col-lg-6">
+            <iframe title="" aria-label="Column Chart" id="datawrapper-chart-qRMuv" src="https://datawrapper.dwcdn.net/qRMuv/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="470" data-external="1">
+            </iframe>
+            <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+          </script>
+          </div>
+          <!-- end datawrapper snippet -->
+
+          <div class="col-lg-5 d-flex flex-column justify-content-top">
+            <h3>Washington State & County Eviction Trends</h3>
+            <p>Washington State's eviction filing count is 54% higher in Feb. 2024 than it was in Feb. 2019. 
+            </p>
+            <ul>
+              <li><span>King County's filing count is 67% higher in Feb. 2024 than it was in Feb. 2019.</span></li>
+              <li><span>Spokane County has the most above-historical-average months.</span></li>
+            </ul>
+
+            <div class="icon-box d-flex position-relative">
+              <i class="bi bi-folder2"></i>
+              <div>
+                <h4><a href="https://evictionresearch.net/washington/" class="stretched-link">Read 2020 Report</a></h4>
+                <p>The State of Evictions: Results from the University of Washington Evictions Project</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+          </div>
+        </div>
+
+    </section>
+
+    <!-- Historical Average Plot Left, text on right-->
+    <section id="alt-services" class="alt-services section" style="padding:30px">
+
+      <div class="container">
+
+        <div class="row justify-content-around gy-4">
+          <!-- original snippet -->
+          <!-- <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/alt-services.jpg" alt=""></div> -->
+
+          <!-- begin datawrapper snippet -->
+          <div class="features-image col-lg-6">
+            <iframe title="" aria-label="Column Chart" id="datawrapper-chart-qRMuv" src="https://datawrapper.dwcdn.net/qRMuv/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="470" data-external="1">
+            </iframe>
+            <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+          </script>
+          </div>
+          <!-- end datawrapper snippet -->
+
+          <div class="col-lg-5 d-flex flex-column justify-content-top">
+            <h3>Washington State & County Eviction Trends</h3>
+            <p>Washington State's eviction filing count is 54% higher in Feb. 2024 than it was in Feb. 2019. 
+            </p>
+            <ul>
+              <li><span>King County's filing count is 67% higher in Feb. 2024 than it was in Feb. 2019.</span></li>
+              <li><span>Spokane County has the most above-historical-average months.</span></li>
+            </ul>
+
+            <div class="icon-box d-flex position-relative">
+              <i class="bi bi-folder2"></i>
+              <div>
+                <h4><a href="https://evictionresearch.net/washington/" class="stretched-link">Read 2020 Report</a></h4>
+                <p>The State of Evictions: Results from the University of Washington Evictions Project</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+          </div>
+        </div>
+
+    </section>
+
 
     <!-- Testimonials Section  (ADD LATER ON WITH LONGER STATS/GRAPHS??)
     <section id="testimonials" class="testimonials section">
