finished wa pg, added table

--- a/wa.html
+++ b/wa.html
@@ -84,22 +84,16 @@
   <main class="main">
 
     <!-- Page Title -->
-    <!-- <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);"> -->
-    <!-- <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);"> -->
-    <!-- <div class="page-title dark-background" style="background-image: url(assets/img/JNGQE9951.png);"> -->
     <div class="page-title-state dark-background" style="background-image: url(images/seattle_air.png);">
       <div class="container position-relative">
         <h1>Washington State</h1>
         <nav class="breadcrumbs">
           <ol>
-            <!-- <li><a href="index.html">Home</a></li> -->
-            <li class="current">Tim Thomas & Mia Schwinghammer</li>
-            <li class="current">Oct. 10, 2024</li>
+            <li>Tim Thomas & Mia Schwinghammer | Oct. 10, 2024</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
-    </div><!-- End Section Title -->
 
     <!-- Stats Counter Section -->
     <section id="stats-counter" class="stats-counter section" style="padding:30px">
@@ -218,8 +212,20 @@
 
           </div>
         </div> 
-      </section><!-- /Historical Average Plot -->
       <br>
+
+      <!-- Table  -->
+      <br>
+      <div class="container">
+        <div class="row justify-content-center gy-4">
+          <iframe title="Washington County Eviction Filings in the Past 12 months (Sept. 2023 to Aug. 2024) " aria-label="Table" id="datawrapper-chart-hqS4c" src="https://datawrapper.dwcdn.net/hqS4c/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="538" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+          </script>
+        </div>
+      </div>
+      <br>
+      <!-- /Table -->
+    </section><!-- /Historical Average Plot -->
+
       <!-- Maps section -->
       <section id="alt-services" class="alt-services section" style="padding:30px">
         <div class="container section-title">
@@ -269,9 +275,7 @@
       </section>
       <br>
       <!-- Maps section -->
-    <div>
-      <p> Last edited: Oct. 10, 2024</p>
-    </div>
+
 
   </main>
 
