--- a/wa.html
+++ b/wa.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/jpeg" href="https://evictionresearch.net/archive/jpg/color/EvictionsStudy_EmblemSquare_red_icon.jpeg">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>State Profile - Eviction Research Network Bootstrap Template</title>
+    <title>WA Eviction Filings</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <!-- Favicons -->
@@ -75,7 +75,7 @@
 <!-- Page Title -->
 <div class="page-title-state dark-background" style="background-image: url(images/seattle_air.png);">
   <div class="container position-relative">
-    <h1>Washington State</h1>
+    <h1>Washington State Eviction Filings</h1>
     <nav class="breadcrumbs">
       <ol>
         <li>Tim Thomas & Mia Schwinghammer | Oct. 10, 2024</li>
@@ -178,13 +178,15 @@
                     </div>
                     <!-- /second graph -->
                     <!-- description of second graph -->
-                    <div class="col-lg-5 d-flex flex-column justify-content-center">
+                    <div class="col-lg-5 d-flex flex-column">
                       <p><b>Washington State's eviction filing count has been above the historical average since July 2023.
                       </b></p>
-                      <p> Out of the last 10 months, 3 months had over 2,000 state wide eveictions.
+                      <p> The Washington State Eviction Filings by County graph shows the overall eviction filing counts since April 2023. As of July 2023, the state exceeded the monthly historical average. October 2023 marked the highest monthly count of over 2,000 cases per month. Since then, the state has filed roughly more than 1,900 cases per month.
                       </p>
                       <ul>
-                        <li><span>King County's filing count has been over 400 per month since July 2023.</span></li>
+                        <li><span>King County served 7,362 filings in the last 12 months. The second highest count was 6,971 in 2005.</span></li>
+                        <li><span>Clark County had the highest eviction rate (3.4 filings per 100 renters) followed by Pierce and Spokane at 2.9% and Thurston with 2.4%.</span></li>
+                        <li><span>Washington evictions are both an urban and rural issue. Asotin, Benton, Franklin, and Lewis each have eviction rates that are above the state average of 2.1%.</span></li>
                       </ul>
                     </div>
                     <!-- /description of second graph -->
@@ -209,9 +211,11 @@
                   <h2>Washington State Eviction Maps</h2>
                   <br>
                 </div>
-                <div class="container"  style="column-count: 2;">
+                <div class="container">
+                  <div class="row justify-content-center gy-4">
                   <iframe title="Washington State Eviction Filing Count" aria-label="Map" id="datawrapper-chart-Oa2mA" src="https://datawrapper.dwcdn.net/Oa2mA/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; padding-right:65px" height="525" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                   </script>
+                </div>
                   <br><br>
                   <b>
                   Counties that evicted 2,000+ people in the last 12 months:
@@ -227,8 +231,10 @@
                   </p>
 
                   <!-- begin datawrapper snippet -->
+                  <div class="row justify-content-center gy-4">
                   <iframe title="Washington State Eviction Filing Rate" aria-label="Map" id="datawrapper-chart-ge8x2" src="https://datawrapper.dwcdn.net/ge8x2/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;padding-left:35px" height="528" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
                   </script>
+                </div>
                   <br><br>
                   <b>
                   Counties with top filling rates and counts:
