--- a/wa.html
+++ b/wa.html
@@ -43,7 +43,7 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="https://evictionresearch.net/" class="active">Home</a></li>
-            <li><a href="https://evictionresearch.net/">About</a></li>
+            <li><a href="https://evictionresearch.net#about">About</a></li>
             <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>State Eviction Maps & Profiles</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
